hard-gists/a90c6f22372de8859f14/run.log
=== Docker Run Log for a90c6f22372de8859f14 ===
Started at: Mi 29. Okt 19:09:12 CET 2025

[2025-10-29 19:09:13] START: Running container for a90c6f22372de8859f14
[2025-10-29 19:09:13] SUCCESS: Container 4e9526a2ba702d70caff6cb04b406a0fad3335228d0851edbe6e0cf3942e1797 started for a90c6f22372de8859f14
=== Container logs for a90c6f22372de8859f14 ===
  File "/snippet.py", line 242
    print "1:", 
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a90c6f22372de8859f14 ===
[2025-10-29 19:09:15] INFO: Container 4e9526a2ba702d70caff6cb04b406a0fad3335228d0851edbe6e0cf3942e1797 has stopped
